chore(room): 채팅방 생성 API 정리
feat/chat